--- a/index.html
+++ b/index.html
@@ -10,13 +10,16 @@
     <link rel="stylesheet" href="./css/styles.css"/>
 </head>
 <body>
-    <header>
-        <nav>
-        <a href="./index.html">WebStudio</a>
-            <ul>
-                <li><a href="">Studio</a></li>
-                <li><a href="">Portfolio</a></li>
-                <li><a href="">Contacts</a></li>
+    <header class="header">
+        <nav class="header-navigation">
+        <a class="header-logo-link" href="./index.html"><span class="header-logo-web">Web</span>Studio</a>
+            <ul class="header-menu-list">
+                <li class="header-menu-item">
+                    <a class="header-menu-menu-link" href="">Studio</a></li>
+                <li class="header-menu-item">
+                    <a class="header-menu-menu-link" href="">Portfolio</a></li>
+                <li class="header-menu-item">
+                    <a class="header-menu-menu-link" href="">Contacts</a></li>
             </ul>
         </nav>
         <address>
@@ -28,38 +31,50 @@
     </header>
 
     <main>
-        <section>
-            <h1>Effective Solutions for Your Business</h1>
-            <button type="button">Order Service</button>
+        <section  class="hero"> 
+            <h1 class="hero-title">
+                Effective Solutions for Your Business</h1>
+            <button class="hero-butt" type="button">Order Service</button>
         </section>
 
-        <section>
-            <h2 hidden>features</h2>
-            <ul>
-               
-                <li><h3>Strategy</h3><p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p></li>
-                <li><h3>Punctuality</h3><p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p></li>
-                <li><h3>Diligence</h3><p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p></li>
-                <li><h3>Technologies</h3><p> Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p></li>
+        <section class="features">
+            <h2 class="vissually-hidden" hidden>features</h2>
+            <ul class="features-list">
+                <li class="features-item">
+                    <h3 class="features-subtitle">Strategy</h3>
+                    <p class="features-item-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p></li>
+                <li>
+                    <h3 class="features-subtitle">Punctuality</h3>
+                    <p class="features-item-text"Bring the key message to the brand's audience for the best price within the shortest possible time.</p></li>
+                <li>
+                    <h3 class="features-subtitle"> </h3>>Diligence</h3>
+                    <p class="features-item-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p></li>
+                <li>
+                    <h3 class="features-subtitle">Technologies</h3>
+                    <p  class="features-item-text"> Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p></li>
             </ul>
         </section>
 
-        <section>
-            <h2>Our Team</h2>
-      <ul>
-        <li><img src="./images/Mark.jpg" alt="Mark" width="264" height="260"><h3>Mark Guerrero</h3><p>Product Designer</p></li>
-        <li><img src="./images/Tom.jpg" alt="Tom" width="264" height="260"><h3>Tom Ford</h3><p>Frontend Developer</p></li>
-        <li><img src="./images/Camila.jpg" alt="Camila" width="264" height="260"><h3>Camila Garcia</h3><p>Marketing</p></li>
-        <li><img src="./images/Daniel.jpg" alt="Daniel" width="264" height="260"><h3>Daniel Wilson</h3><p>UI Designer</p></li>
+        <section class="team">
+            <h2 class="visual-team">Our Team</h2>
+      <ul class="team-list">
+        <li class="team-item">
+            <img src="./images/Mark.jpg" alt="Mark" width="264" height="260"><h3>Mark Guerrero</h3><p>Product Designer</p></li>
+        <li class="team-item">
+            <img src="./images/Tom.jpg" alt="Tom" width="264" height="260"><h3>Tom Ford</h3><p>Frontend Developer</p></li>
+        <li class="team-item">
+            <img src="./images/Camila.jpg" alt="Camila" width="264" height="260"><h3>Camila Garcia</h3><p>Marketing</p></li>
+        <li class="team-item">
+            <img src="./images/Daniel.jpg" alt="Daniel" width="264" height="260"><h3>Daniel Wilson</h3><p>UI Designer</p></li>
       </ul>
 
 
         </section>
     </main>
 
-    <footer>
-        <a href="./index.html">WebStudio</a>
-        <p>Increase the flow of customers and sales for your business with digital marketing &amp; growth solutions.</p>
+    <footer class="about-us">
+        <a class="logo-us" href="./index.html">WebStudio</a>
+        <p class="about-us-text">Increase the flow of customers and sales for your business with digital marketing &amp; growth solutions.</p>
     </footer>
     </body>
     </html>
