--- a/index.html
+++ b/index.html
@@ -12,24 +12,33 @@
 <body>
     <header class="header">
         <nav class="header-navigation">
-        <a class="header-logo-link" href="./index.html"><span class="header-logo-web">Web</span>Studio</a>
+            <a class="header-logo-link" href="./index.html">
+                <span class="header-logo-text">Web<span class="studio">Studio</span></span>
+            </a>
             <ul class="header-menu-list">
                 <li class="header-menu-item">
-                    <a class="header-menu-menu-link" href="">Studio</a></li>
+                    <a class="header-menu-menu-link" href="#">Studio</a>
+                </li>
                 <li class="header-menu-item">
-                    <a class="header-menu-menu-link" href="">Portfolio</a></li>
+                    <a class="header-menu-menu-link" href="#">Portfolio</a>
+                </li>
                 <li class="header-menu-item">
-                    <a class="header-menu-menu-link" href="">Contacts</a></li>
+                    <a class="header-menu-menu-link" href="#">Contacts</a>
+                </li>
             </ul>
         </nav>
-        <address>
-<ul>
-    <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-    <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-</ul>
+        <address class="contact-info">
+            <ul class="contact-list">
+                <li class="contact-item">
+                    <a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </li>
+                <li class="contact-item">
+                    <a class="contact-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                </li>
+            </ul>
         </address>
     </header>
-
+    
     <main>
         <section  class="hero"> 
             <h1 class="hero-title">
