--- a/index.html
+++ b/index.html
@@ -10,37 +10,35 @@
     <link rel="stylesheet" href="./css/styles.css"/>
 </head>
 <body>
-    <header class="header">
+    <header class="logo">
         <nav class="header-navigation">
-            <a class="header-logo-link" href="./index.html">
-                <span class="header-logo-text">Web<span class="studio">Studio</span></span>
-            </a>
-            <ul class="header-menu-list">
-                <li class="header-menu-item">
-                    <a class="header-menu-menu-link" href="#">Studio</a>
+            <a class="header-logo" href="./index.html">Web<span>Studio</span></a>
+            <ul class="header-menu">
+                <li class="header-item">
+                    <a class="header-link" href=""./index.html"">Studio</a>
                 </li>
-                <li class="header-menu-item">
-                    <a class="header-menu-menu-link" href="#">Portfolio</a>
+                <li class="header-link">
+                    <a class="header-link" href="">Portfolio</a>
                 </li>
-                <li class="header-menu-item">
-                    <a class="header-menu-menu-link" href="#">Contacts</a>
+                <li class="header-link">
+                    <a class="header-link" href="">Contacts</a>
                 </li>
             </ul>
         </nav>
-        <address class="contact-info">
-            <ul class="contact-list">
-                <li class="contact-item">
-                    <a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <address class="adress">
+            <ul class="adress-list">
+                <li class="adress-item">
+                    <a class="adress-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
-                <li class="contact-item">
-                    <a class="contact-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                <li class="adress-item">
+                    <a class="adress-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
                 </li>
             </ul>
         </address>
     </header>
     
     <main>
-        <section  class="hero"> 
+        <section  class="title"> 
             <h1 class="hero-title">
                 Effective Solutions for Your Business</h1>
             <button class="hero-butt" type="button">Order Service</button>
@@ -81,9 +79,10 @@
         </section>
     </main>
 
-    <footer class="about-us">
-        <a class="logo-us" href="./index.html">WebStudio</a>
-        <p class="about-us-text">Increase the flow of customers and sales for your business with digital marketing &amp; growth solutions.</p>
+    <footer class="footer">
+        <a class="footer-logo" href="./index.html">Web<span>Studio</span>
+        </a>
+        <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &amp; growth solutions.</p>
     </footer>
     </body>
     </html>
