--- a/index.html
+++ b/index.html
@@ -74,9 +74,37 @@
         <li class="team-item">
             <img src="./images/Daniel.jpg" alt="Daniel" width="264" height="260"><h3>Daniel Wilson</h3><p>UI Designer</p></li>
       </ul>
-
-
         </section>
+ <section class="portfolio">
+    <h3 class="portfolio-title">Our Portfolio</h3>
+    <ul class="portfolio-item">
+        <li class="portfolio-subtitle">
+            <img src="./images/bankapp.jpg" alt="Banking App" width="360"  height="300">
+            <h4 class="portfolio-text">Banking App</h4><p class="portfolio-under-text">App</p>
+        </li>
+        <li class="portfolio-subtitle">
+            <img src="./images/cashless.jpg" alt="Cashless Payment" width="360"  height="300">
+            <h4 class="portfolio-text">Cashless Paymentp</h4><p class="portfolio-under-text">Marketing</p>
+        </li>
+        <li class="portfolio-subtitle">
+            <img src="./images/meditation.jpg" alt="Meditation App" width="360"  height="300">
+            <h4 class="portfolio-text">Meditation App</h4><p class="portfolio-under-text">App</p>
+        </li>
+        <li class="portfolio-subtitle">
+            <img src="./images/taxi.jpg" alt="Taxi Service" width="360"  height="300">
+            <h4 class="portfolio-text">Taxi Service</h4><p class="portfolio-under-text">Marketing</p>
+        </li>
+        <li class="portfolio-subtitle">
+            <img src="./images/screen.jpg" alt="Screen Illustrations" width="360"  height="300">
+            <h4 class="portfolio-text">Screen Illustrations</h4><p class="portfolio-under-text">Design</p>
+        </li>
+        <li class="portfolio-subtitle">
+            <img src="./images/online.jpg" alt="Online Courses" width="360"  height="300">
+            <h4 class="portfolio-text">Online Courses</h4><p class="portfolio-under-text">Marketing</p>
+        </li>
+    
+    </ul>
+ </section>
     </main>
 
     <footer class="footer">
