--- a/index.html
+++ b/index.html
@@ -76,31 +76,31 @@
       </ul>
         </section>
  <section class="portfolio">
-    <h3 class="portfolio-title">Our Portfolio</h3>
+    <h2 class="portfolio-title">Our Portfolio</h2>
     <ul class="portfolio-item">
         <li class="portfolio-subtitle">
             <img src="./images/bankapp.jpg" alt="Banking App" width="360"  height="300">
-            <h4 class="portfolio-text">Banking App</h4><p class="portfolio-under-text">App</p>
+            <h3 class="portfolio-text">Banking App</h3><p>App</p>
         </li>
         <li class="portfolio-subtitle">
             <img src="./images/cashless.jpg" alt="Cashless Payment" width="360"  height="300">
-            <h4 class="portfolio-text">Cashless Paymentp</h4><p class="portfolio-under-text">Marketing</p>
+            <h3 class="portfolio-text">Cashless Paymentp</h3><p>Marketing</p>>
         </li>
         <li class="portfolio-subtitle">
             <img src="./images/meditation.jpg" alt="Meditation App" width="360"  height="300">
-            <h4 class="portfolio-text">Meditation App</h4><p class="portfolio-under-text">App</p>
+            <h3 class="portfolio-text">Meditation App</h3><p>App</p>
         </li>
         <li class="portfolio-subtitle">
             <img src="./images/taxi.jpg" alt="Taxi Service" width="360"  height="300">
-            <h4 class="portfolio-text">Taxi Service</h4><p class="portfolio-under-text">Marketing</p>
+            <h3 class="portfolio-text">Taxi Service</h3><p>Marketing</p>
         </li>
         <li class="portfolio-subtitle">
             <img src="./images/screen.jpg" alt="Screen Illustrations" width="360"  height="300">
-            <h4 class="portfolio-text">Screen Illustrations</h4><p class="portfolio-under-text">Design</p>
+            <h3 class="portfolio-text">Screen Illustrations</h3><p>Design</p>
         </li>
         <li class="portfolio-subtitle">
             <img src="./images/online.jpg" alt="Online Courses" width="360"  height="300">
-            <h4 class="portfolio-text">Online Courses</h4><p class="portfolio-under-text">Marketing</p>
+            <h3class="portfolio-text">Online Courses</h3><p>Marketing</p>
         </li>
     
     </ul>
