--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <a class="header-logo" href="./index.html">Web<span>Studio</span></a>
             <ul class="header-menu">
                 <li class="header-item">
-                    <a class="header-link" href=""./index.html"">Studio</a>
+                    <a class="header-link" href="./index.html">Studio</a>
                 </li>
                 <li class="header-link">
                     <a class="header-link" href="">Portfolio</a>
