--- a/index.html
+++ b/index.html
@@ -80,23 +80,23 @@
     <ul class="portfolio-item">
         <li class="portfolio-subtitle">
             <img src="./images/bankapp.jpg" alt="Banking App" width="360"  height="300">
-            <h3 class="portfolio-text">Banking App</h3> <p class="portfolio-textunder">App</p>
+            <h3 class="portfolio-text">Banking App</h3> <p>App</p>
         </li>
             <img src="./images/cashless.jpg" alt="Cashless Payment" width="360"  height="300">
             <h3 class="portfolio-text">Cashless Paymentp</h3>
-            <p class="portfolio-textunder">Marketing</p>
+            <p>Marketing</p>
         </li>
             <img src="./images/meditation.jpg" alt="Meditation App" width="360"  height="300">
-            <h3 class="portfolio-text">Meditation App</h3> <p class="portfolio-textunder">App</p>
+            <h3 class="portfolio-text">Meditation App</h3> <p>App></p>
         </li>
             <img src="./images/taxi.jpg" alt="Taxi Service" width="360"  height="300">
-            <h3 class="portfolio-text">Taxi Service</h3> <p class="portfolio-textunder">Marketing</p>
+            <h3 class="portfolio-text">Taxi Service</h3> <p>Marketing</p>
         </li>
             <img src="./images/screen.jpg" alt="Screen Illustrations" width="360"  height="300">
-            <h3 class="portfolio-text">Screen Illustrations</h3> <p class="portfolio-textunder">Design</p>
+            <h3 class="portfolio-text">Screen Illustrations</h3> <p>Design</p>
         </li>
             <img src="./images/online.jpg" alt="Online Courses" width="360"  height="300">
-            <h3class="portfolio-text">Online Courses</h3> <p class="portfolio-textunder">Marketing</p>
+            <h3class="portfolio-text">Online Courses</h3> <p>Marketing</p>
         </li>
     
     </ul>
