--- a/index.html
+++ b/index.html
@@ -66,13 +66,20 @@
             <h2 class="visual-team">Our Team</h2>
       <ul class="team-list">
         <li class="team-item">
-            <img src="./images/Mark.jpg" alt="Mark" width="264" height="260"><h3>Mark Guerrero</h3><p>Product Designer</p></li>
+            <img src="./images/Mark.jpg" alt="Mark" width="264" height="260">
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p></li>
         <li class="team-item">
-            <img src="./images/Tom.jpg" alt="Tom" width="264" height="260"><h3>Tom Ford</h3><p>Frontend Developer</p></li>
+            <img src="./images/Tom.jpg" alt="Tom" width="264" height="260">
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p></li>
         <li class="team-item">
-            <img src="./images/Camila.jpg" alt="Camila" width="264" height="260"><h3>Camila Garcia</h3><p>Marketing</p></li>
+            <img src="./images/Camila.jpg" alt="Camila" width="264" height="260">
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p></li>
         <li class="team-item">
-            <img src="./images/Daniel.jpg" alt="Daniel" width="264" height="260"><h3>Daniel Wilson</h3><p>UI Designer</p></li>
+            <img src="./images/Daniel.jpg" alt="Daniel" width="264" height="260"><h3>Daniel Wilson</h3>
+            <p>UI Designer</p></li>
       </ul>
         </section>
  <section class="portfolio">
