--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <h3 class="features-subtitle">Punctuality</h3>
                     <p class="features-item-text"Bring the key message to the brand's audience for the best price within the shortest possible time.</p></li>
                 <li>
-                    <h3 class="features-subtitle"> </h3>>Diligence</h3>
+                    <h3 class="features-subtitle"> </h3>Diligence</h3>
                     <p class="features-item-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p></li>
                 <li>
                     <h3 class="features-subtitle">Technologies</h3>
@@ -67,8 +67,8 @@
       <ul class="team-list">
         <li class="team-item">
             <img src="./images/Mark.jpg" alt="Mark" width="264" height="260">
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p></li>
+            <h3 class="team-name">Mark Guerrero</h3>
+            <p class="team-position">Product Designer</p></li>
         <li class="team-item">
             <img src="./images/Tom.jpg" alt="Tom" width="264" height="260">
             <h3>Tom Ford</h3>
