--- a/index.html
+++ b/index.html
@@ -71,15 +71,16 @@
             <p class="team-position">Product Designer</p></li>
         <li class="team-item">
             <img src="./images/Tom.jpg" alt="Tom" width="264" height="260">
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p></li>
+            <h3 class="team-name">Tom Ford</h3>
+            <p class="team-position">Frontend Developer</p></li>
         <li class="team-item">
             <img src="./images/Camila.jpg" alt="Camila" width="264" height="260">
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p></li>
+            <h3 class="team-name">Camila Garcia</h3>
+            <p class="team-position">Marketing</p></li>
         <li class="team-item">
-            <img src="./images/Daniel.jpg" alt="Daniel" width="264" height="260"><h3>Daniel Wilson</h3>
-            <p>UI Designer</p></li>
+            <img src="./images/Daniel.jpg" alt="Daniel" width="264" height="260">
+            <h3 class="team-name">Daniel Wilson</h3>
+            <p class="team-position"> UI Designer</p></li>
       </ul>
         </section>
  <section class="portfolio">
@@ -87,23 +88,23 @@
     <ul class="portfolio-item">
         <li class="portfolio-subtitle">
             <img src="./images/bankapp.jpg" alt="Banking App" width="360"  height="300">
-            <h3 class="portfolio-text">Banking App</h3> <p>App</p>
+            <h3 class="portfolio-text">Banking App</h3> <p class="portfolio-up">App</p>
         </li>
             <img src="./images/cashless.jpg" alt="Cashless Payment" width="360"  height="300">
             <h3 class="portfolio-text">Cashless Paymentp</h3>
-            <p>Marketing</p>
+            <p class="portfolio-up">Marketing</p>
         </li>
             <img src="./images/meditation.jpg" alt="Meditation App" width="360"  height="300">
-            <h3 class="portfolio-text">Meditation App</h3> <p>App></p>
+            <h3 class="portfolio-text">Meditation App</h3> <p class="portfolio-up">App></p>
         </li>
             <img src="./images/taxi.jpg" alt="Taxi Service" width="360"  height="300">
-            <h3 class="portfolio-text">Taxi Service</h3> <p>Marketing</p>
+            <h3 class="portfolio-text">Taxi Service</h3> <p class="portfolio-up">Marketing</p>
         </li>
             <img src="./images/screen.jpg" alt="Screen Illustrations" width="360"  height="300">
-            <h3 class="portfolio-text">Screen Illustrations</h3> <p>Design</p>
+            <h3 class="portfolio-text">Screen Illustrations</h3> <p class="portfolio-up">Design</p>
         </li>
             <img src="./images/online.jpg" alt="Online Courses" width="360"  height="300">
-            <h3class="portfolio-text">Online Courses</h3> <p>Marketing</p>
+            <h3 class="portfolio-text">Online Courses</h3> <p class="portfolio-up"><Marketing</p>
         </li>
     
     </ul>
