--- a/index.html
+++ b/index.html
@@ -87,23 +87,23 @@
     <h2 class="portfolio-title">Our Portfolio</h2>
     <ul class="portfolio-item">
         <li class="portfolio-subtitle">
-            <img src="./images/bankapp.jpg" alt="Banking App" width="360"  height="300">
+            <img src="./images/bankapp.jpg" alt="" width="360"  height="300">
             <h3 class="portfolio-text">Banking App</h3> <p class="portfolio-up">App</p>
         </li>
             <img src="./images/cashless.jpg" alt="Cashless Payment" width="360"  height="300">
             <h3 class="portfolio-text">Cashless Paymentp</h3>
             <p class="portfolio-up">Marketing</p>
         </li>
-            <img src="./images/meditation.jpg" alt="Meditation App" width="360"  height="300">
+            <img src="./images/meditation.jpg" alt="" width="360"  height="300">
             <h3 class="portfolio-text">Meditation App</h3> <p class="portfolio-up">App></p>
         </li>
-            <img src="./images/taxi.jpg" alt="Taxi Service" width="360"  height="300">
+            <img src="./images/taxi.jpg" alt="" width="360"  height="300">
             <h3 class="portfolio-text">Taxi Service</h3> <p class="portfolio-up">Marketing</p>
         </li>
-            <img src="./images/screen.jpg" alt="Screen Illustrations" width="360"  height="300">
+            <img src="./images/screen.jpg" alt="" width="360"  height="300">
             <h3 class="portfolio-text">Screen Illustrations</h3> <p class="portfolio-up">Design</p>
         </li>
-            <img src="./images/online.jpg" alt="Online Courses" width="360"  height="300">
+            <img src="./images/online.jpg" alt="" width="360"  height="300">
             <h3 class="portfolio-text">Online Courses</h3> <p class="portfolio-up"><Marketing</p>
         </li>
     
