--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         </li>
         <li class="portfolio-subtitle">
             <img src="./images/meditation.jpg" alt="Meditation App" width="360"  height="300">
-            <h3 class="portfolio-text">Meditation App</h3> <p class="portfolio-up">App></p>
+            <h3 class="portfolio-text">Meditation App</h3> <p class="portfolio-up">App</p>
         </li>
         <li class="portfolio-subtitle">
             <img src="./images/taxi.jpg" alt="Taxi Service" width="360"  height="300">
