--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </li>
         <li class="portfolio-subtitle">
             <img src="./images/cashless.jpg" alt="Cashless Payment" width="360"  height="300">
-            <h3 class="portfolio-text">Cashless Paymentp</h3>
+            <h3 class="portfolio-text">Cashless Payment</h3>
             <p class="portfolio-up">Marketing</p>
         </li>
         <li class="portfolio-subtitle">
