--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header class="logo">
         <nav class="header-navigation">
-            <a class="header-logo" href="./index.html">Web<span>Studio</span></a>
+            <a class="header-logo" href="./index.html">Web<span class="header-logo-itallic">Studio</span></a>
             <ul class="header-menu">
                 <li class="header-item">
                     <a class="header-link" href="./index.html">Studio</a>
@@ -122,7 +122,7 @@
     </main>
 
     <footer class="footer">
-        <a class="footer-logo" href="./index.html">Web<span>Studio</span></a>
+        <a class="footer-logo" href="./index.html">Web<span class="footer-logoitalic">Studio</span></a>
         <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &amp; growth solutions.</p>
     </footer>
     </body>
