--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css" integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
+    <div class="container">
     <header class="logo">
         <nav class="header-navigation">
             <a class="header-logo" href="./index.html">Web<span class="header-logo-itallic">Studio</span></a>
@@ -36,33 +38,38 @@
             </ul>
         </address>
     </header>
-    
+</div>
     <main>
         <section  class="title"> 
+            <div cclass="container title-container">
             <h1 class="hero-title">
-                Effective Solutions for Your Business</h1>
+                Effective Solutions <br> for Your Business</h1>
             <button class="hero-butt" type="button">Order Service</button>
+        </div>
         </section>
-
+    
         <section class="features">
             <h2 class="vissually-hidden" hidden>features</h2>
+            <div class="container">
             <ul class="features-list">
                 <li class="features-item">
                     <h3 class="features-subtitle">Strategy</h3>
                     <p class="features-item-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p></li>
                 <li>
                     <h3 class="features-subtitle">Punctuality</h3>
-                    <p class="features-item-text"Bring the key message to the brand's audience for the best price within the shortest possible time.</p></li>
+                    <p class="features-item-text">Bring the key message to the brands audience for the best price within the shortest possible time.</p></li>
                 <li>
-                    <h3 class="features-subtitle"> </h3>Diligence</h3>
+                    <h3 class="features-subtitle">Diligence</h3>
                     <p class="features-item-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p></li>
                 <li>
                     <h3 class="features-subtitle">Technologies</h3>
                     <p  class="features-item-text"> Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p></li>
             </ul>
+            </div>
         </section>
 
         <section class="team">
+            <div class="container">
             <h2 class="visual-team">Our Team</h2>
       <ul class="team-list">
         <li class="team-item">
@@ -82,6 +89,7 @@
             <h3 class="team-name">Daniel Wilson</h3>
             <p class="team-position"> UI Designer</p></li>
       </ul>
+    </div>
         </section>
  <section class="portfolio">
     <h2 class="portfolio-title">Our Portfolio</h2>
