--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
     </div>
         </section>
  <section class="portfolio">
+    <div class="container">
     <h2 class="portfolio-title">Our Portfolio</h2>
     <ul class="portfolio-item">
         <li class="portfolio-subtitle">
@@ -124,14 +125,16 @@
             <h3 class="portfolio-text">Online Courses</h3> 
             <p class="portfolio-up">Marketing</p>
         </li>
-    
     </ul>
+</div>
  </section>
     </main>
 
     <footer class="footer">
+        <div class="container">
         <a class="footer-logo" href="./index.html">Web<span class="footer-logoitalic">Studio</span></a>
         <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &amp; growth solutions.</p>
+        </div>
     </footer>
     </body>
     </html>
