--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <li class="team-item">
             <img src="./images/Mark.jpg" alt="Mark" width="264" height="260">
             <h3 class="team-name">Mark Guerrero</h3>
-            <p class="team-pos">Product Designer</p></li>
+            <p class="team-position">Product Designer</p></li>
         <li class="team-item">
             <img src="./images/Tom.jpg" alt="Tom" width="264" height="260">
             <h3 class="team-name">Tom Ford</h3>
